@@ -39,34 +39,6 @@ class AppMeta {
                     git: 'http://gitlab.shixhlocal.com/oms/order-sdk.git',
                     isSonar: true
             ],
-            [
-                    app: "order-provider",
-                    namespace: 'oms',
-                    lang: 'java',
-                    group: 'dubbo',
-                    appPort: 30401,
-                    artifact: 'target/order-provider.jar',
-                    git: 'http://gitlab.shixhlocal.com/oms/order-provider.git',
-                    javaOpts: [
-                            'mit': '-server -Xms1g -Xmx1g -Duser.timezone=Asia/Shanghai -Djava.security.egd=file:/dev/./urandom -Ddubbo.protocol.port=20880 -Dxxl.job.executor.port=9991',
-                            'sit': '-server -Xms1g -Xmx1g -Duser.timezone=Asia/Shanghai -Djava.security.egd=file:/dev/./urandom -Ddubbo.protocol.port=20880 -Dxxl.job.executor.port=9991',
-                            'uat': '-server -Xms4096m -Xmx4096m -XX:NewRatio=4 -XX:MetaspaceSize=256M -XX:MaxMetaspaceSize=256M -XX:+DisableExplicitGC -XX:+UseConcMarkSweepGC -XX:+CMSParallelInitialMarkEnabled -XX:+CMSParallelRemarkEnabled -XX:+UseFastAccessorMethods -XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=80 -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Duser.timezone=Asia/Shanghai -Djava.security.egd=file:/dev/./urandom -Ddubbo.protocol.port=20880 -Dxxl.job.executor.port=9991'
-                    ],
-                    portArgs: '-p 30401:20880 -p 30404:9991',
-                    binaryConfig: true
-            ],
-
-            // tomcat old project  sxh
-            [
-                    app: "admin",
-                    lang: 'tomcat',
-                    group: 'jfb_ec_web',
-                    appPort: 33101,
-                    artifact: 'target/jfb_ec_admin-1.1.0-RELEASES.war',
-                    git: 'http://gitlab.shixhlocal.com/bizplatform/wechat-admin-h5.git',
-                    javaOpts: '-Duser.timezone=Asia/Shanghai -Djava.security.egd=file:/dev/./urandom -Dserver.port=8080',
-                    portArgs: '-p 33101:8080'
-            ],
             // 比较另类的一个
             [
                     app: "h5-web",
